src/objects/CD_GMT_Operational_View__c.object
<CustomObject>
    <fields>
        <fullName>Action_Owner__c</fullName>
        <label>Action Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Team__c</fullName>
        <label>Business Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CWS_Savings_Dollarsign__c</fullName>
        <label>CWS Savings($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GMT_OPR_PLAN_ID__c</fullName>
        <label>GMT_OPR_PLAN_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_Product_Name__c</fullName>
        <formula>Product_Name__r.Name</formula>
        <label>GMT Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_SubCategory_1_IOD_OUT__c</fullName>
        <formula>GM_SubCategory_1__r.GM_SubCategory1__r.Name</formula>
        <label>GMT SubCategory 1 IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_SubCategory_2_IOD_OUT__c</fullName>
        <formula>GM_SubCategory_2__r.GM_SubCategory2__r.Name</formula>
        <label>GMT SubCategory 2 IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GMT_SubCategory_3_IOD_OUT__c</fullName>
        <formula>GM_SubCategory_3__r.GM_SubCategory3__r.Name</formula>
        <label>GMT SubCategory 3 IOD OUT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GM_Improvement_percntge__c</fullName>
        <label>GM Improvement(%)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory 1</label>
        <referenceTo>CD_GMT_Product_Categories__c</referenceTo>
        <relationshipLabel>CD GMT Operational View</relationshipLabel>
        <relationshipName>CD_GMT_Operational_View</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory 2</label>
        <referenceTo>CD_GMT_Product_Categories__c</referenceTo>
        <relationshipLabel>CD GMT Operational View (GM SubCategory 2)</relationshipLabel>
        <relationshipName>CD_GMT_Operational_View1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GM_SubCategory_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GM SubCategory 3</label>
        <referenceTo>CD_GMT_Product_Categories__c</referenceTo>
        <relationshipLabel>CD GMT Operational View (GM SubCategory 3)</relationshipLabel>
        <relationshipName>CD_GMT_Operational_View2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <picklist>
            <picklistValues>
                <fullName>Best Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stretch Estimate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>CD_GMT_ProductDetails__c</referenceTo>
        <relationshipLabel>CD GMT Operational View</relationshipLabel>
        <relationshipName>CD_GMT_Operational_View</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CD GMT Operational View</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Report_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD GMT Operational View Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD GMT Operational View</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>